--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Title is this by nab no 2, test no 3</title>
-</head>
-<body>
-    <body>
-        <!-- Introduction section -->
-        <section id="intro">
-          <div class="container">
-            <h1>Welcome to Our Group Website</h1>
-            <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing.</p>
-            <h2>Our Team</h2>
-            <ul></ul>
-              <li>Member 1</li>
-              <li>Member 2</li>
-              <li>Member 3</li>
-    
-            </ul>
-          </div>
-        </section>
-      
-        <!-- Project section -->
-        <section id="project">
-          <div class="container">
-            <h2>Our Project</h2>
-            <p>Our project is a web application that allows users to do X, Y, and Z. We are using HTML5, CSS3, JavaScript, PHP, and MySQL to build the application.</p>
-            <p>Here are some of the features that our application will include:</p>
-            <ul>
-              <li>Feature 1</li>
-              <li>Feature 2</li>
-              <li>Feature 3</li>
-            </ul>
-          </div>
-        </section>
-      </body>
+    <title>Our Group Website</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <!-- Introduction section -->
+    <section id="intro">
+      <div class="container">
+        <h1>Welcome to Our Group Website</h1>
+        <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing.</p>
+        <h2>Our Team</h2>
+        <ul>
+          <li>Member 1</li>
+          <li>Member 2</li>
+          <li>Member 3</li>
+          <li>Member 4</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Project section -->
+    <section id="project">
+      <div class="container">
+        <h2>Our Project</h2>
+        <p>Our project is a web application that allows users to do X, Y, and Z. We are using HTML5, CSS3, JavaScript, PHP, and MySQL to build the application.</p>
+        <p>Here are some of the features that our application will include:</p>
+        <ul>
+          <li>Feature 1</li>
+          <li>Feature 2</li>
+          <li>Feature 3</li>
+        </ul>
+      </div>
+    </section>
+  </body>
 </html>
