--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <section id="intro">
       <div class="container">
         <h1>Welcome to Our Group Website</h1>
-        <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing.</p>
+        <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing. </p>
         <h2>Our Team</h2>
         <ul>
-          <li>Member 1</li>
-          <li>Member 2</li>
-          <li>Member 3</li>
-          <li>Member 4</li>
+          <li>Nabeel Shaikh</li>
+          <li>Hasan Khan</li>
+          <li>Jon O'Brien</li>
         </ul>
       </div>
     </section>
