--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1>Welcome to Our Group Website</h1>
         <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing. </p>
-        <h2>Our Team</h2>
+        <h2>Our Group</h2>
         <ul>
           <li>Nabeel Shaikh</li>
           <li>Hasan Khan</li>
