--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <div class="container">
         <h1>Welcome to Our Group Website</h1>
         <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing. </p>
+        </div>
+        </section>
+        <section id ="Group">
+        <div class = "container"> 
         <h2>Our Group</h2>
         <ul>
           <li>Nabeel Shaikh</li>
