--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing. </p>
         </div>
         </section>
-        <section id ="Group">
+        <section id ="team">
         <div class = "container"> 
-        <h2>Our Group</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>Nabeel Shaikh</li>
           <li>Hasan Khan</li>
