--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <section id ="team">
         <div class = "container"> 
         <h2>Our Team</h2>
+        <div class="members">
         <ul>
           <li>Nabeel Shaikh</li>
           <li>Hasan Khan</li>
           <li>Jon O'Brien</li>
         </ul>
+      </div>
       </div>
     </section>
 
