--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="project">
       <div class="container">
         <h2>Our Project</h2>
-        <p>Our project is a web application that allows users to do X, Y, and Z. We are using HTML5, CSS3, PHP, and MySQL to build the application.</p>
+        <p>Our roject is a web application that allows users to do X, Y, and Z. We are using HTML5, CSS3, PHP, and MySQL to build the application.</p>
         <p>Here are some of the features that our application will include:</p>
         <ul>
           <li>Feature 1</li>
