--- a/index.html
+++ b/index.html
@@ -6,38 +6,44 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <!-- Introduction section -->
+    <!-- Header section -->
+    <header>
+      <div class="container">
+        <h1 class="text-center">Our Group Website</h1>
+      </div>
+    </header>
+
+    <!-- Introduction and Team section -->
     <section id="intro">
       <div class="container">
-        <h1>Welcome to Our Group Website</h1>
+        <h2 class="text-center">Our Team</h2>
         <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing. </p>
-        </div>
-        </section>
-
-      
-        <section id ="team">
-        <div class = "container"> 
-        <h2>Our Team</h2>
+        
         <div class="members">
-        <ul>
-          <li>Nabeel Shaikh</li>
-          <li>Hasan Khan</li>
-          <li>Jon O'Brien</li>
-        </ul>
-      </div>
+          <ul>
+            <li>Nabeel Shaikh</li>
+            <li>Hasan Khan</li>
+            <li>Jon O'Brien</li>
+          </ul>
+        </div>
       </div>
     </section>
 
     <!-- Project section -->
     <section id="project">
       <div class="container">
-        <h2>Our Project</h2>
-        <p>Our roject is a web application that allows users to do X, Y, and Z. We are using HTML5, CSS3, PHP, and MySQL to build the application.</p>
-        <p>Here are some of the features that our application will include:</p>
+        <h2 class="text-center">Our Project</h2>
+        <p>Our project is a web application that allows users to select and update the database connected to the website. We have implemented extra security measures to ensure our website does not have any attacks.</p>
+        <p>Languages used to develop the front end:</p>
         <ul>
-          <li>Feature 1</li>
-          <li>Feature 2</li>
-          <li>Feature 3</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript/PHP</li>
+        </ul>
+        <p>Languages used to develop the back end:</p>
+        <ul>
+          <li>PHP</li>
+          <li>SQL</li>
         </ul>
       </div>
     </section>
