final changes nab

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Our Group Website</title>
+    <title>CP476 Project</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- Header section -->
     <header>
       <div class="container">
-        <h1 class="text-center">Our Group Website</h1>
+        <h1 class="text-center">Group #20 Website</h1>
       </div>
     </header>
 
@@ -17,8 +17,6 @@
     <section id="intro">
       <div class="container">
         <h2 class="text-center">Our Team</h2>
-        <p>Our group consists of several members who are working on a web development project together. We aim to create a website that is functional, user-friendly, and visually appealing. </p>
-        
         <div class="members">
           <ul>
             <li>Nabeel Shaikh</li>
@@ -29,25 +27,6 @@
       </div>
     </section>
 
-    <!-- Project section -->
-    <section id="project">
-      <div class="container">
-        <h2 class="text-center">Our Project</h2>
-        <p>Our project is a web application that allows users to select and update the database connected to the website. We have implemented extra security measures to ensure our website does not have any attacks.</p>
-        <p>Languages used to develop the front end:</p>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript/PHP</li>
-        </ul>
-        <p>Languages used to develop the back end:</p>
-        <ul>
-          <li>PHP</li>
-          <li>SQL</li>
-        </ul>
-      </div>
-    </section>
-  </body>
 
   <?php
   include 'add_student.php';
